feat: add load data tips

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>dev-zuo短链接服务</title>
   </head>
   <body>
+    <p>获取短链接配置中....</p>
     <script>
       fetch("http://zuo11.com:5000/share/shortLink/list?_id=63c430837fc644a8c1b0e9fd&pageSize=100")
         .then((res) => {
